<resources>
    <string name="app_name">Fotag (y467yang)</string>

    <string name="action_star_1">Star1</string>
    <string name="action_star_2">Star2</string>
    <string name="action_star_3">Star3</string>
    <string name="action_star_4">Star4</string>
    <string name="action_star_5">Star5</string>

    <string name="action_search">Search</string>
    <string name="action_more">More</string>
    <string name="action_load">Load images</string>
    <string name="action_delete">Delete all images</string>
    <string name="action_clear">Clear filter</string>

    <string name="search_hint">Search image via url…</string>

    <string name="card_text">Rating:</string>
</resources>
